[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprite.png" type="Texture" id=2]
[ext_resource path="res://InputAction.gd" type="Script" id=3]
[ext_resource path="res://AI.gd" type="Script" id=4]
[ext_resource path="res://Tap.ogg" type="AudioStream" id=5]
[ext_resource path="res://BebasNeue.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12, 7 )

[sub_resource type="GDScript" id=3]

script/source = "extends Timer

onready var label = get_parent().get_node(\"TimerLabel\")

func start():
	.start()
	get_parent().toggle_frozen()

func _process(delta):
	var time = get_time_left()
	if time > 0:
		label.text = String(time + 1).substr(0, 1)
	else:
		label.text = \"\""

[sub_resource type="DynamicFont" id=4]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )

[node name="Player" type="KinematicBody2D" groups=[
"Players",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 1.0
script = ExtResource( 1 )
max_velocity = 200
drag_scale = Vector2( 0.9, 0.9 )

[node name="Shadow" type="Sprite" parent="."]

modulate = Color( 0, 0, 0, 0.160235 )
show_behind_parent = true
scale = Vector2( 0.3, 0.1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

show_behind_parent = true
position = Vector2( 0, -20 )
scale = Vector2( 0.2, 0.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="."]

position = Vector2( 0, -3 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="InputAction" type="Node2D" parent="."]

visible = false
position = Vector2( 0, -40 )
script = ExtResource( 3 )

[node name="AI" type="Node2D" parent="."]

visible = false
script = ExtResource( 4 )

[node name="TouchArea" type="Area2D" parent="."]

position = Vector2( 0, -40 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="TouchArea"]

position = Vector2( 0, 37 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="FreezeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
script = SubResource( 3 )

[node name="TapSound" type="AudioStreamPlayer2D" parent="."]

visible = false
stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CoinLabel" type="Label" parent="."]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -96.0
margin_right = -52.0
margin_bottom = -72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NameTag" type="Label" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "P0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="DebugLabel" type="Label" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = -40.0
margin_right = 75.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimerLabel" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = -30.0
margin_right = 4.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="area_entered" from="TouchArea" to="." method="pass_crocodile"]

[connection signal="timeout" from="FreezeTimer" to="." method="toggle_frozen"]


